# ChatBot

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  README_DEPLOY.md  RENDER_DEPLOY.md  __init__.py  activate.ps1  activate_venv.bat  agents.code-workspace  app.py  clean_vscode.bat  configure_vscode.py  demo_widget.html  deploy.py  deploy_instructions.md  environment.yml  fix_conda_problem.bat  fix_database.py  langgraph.json  main.py  prospects.db  prospects_production.db  pyproject.toml  pytest.ini  quick_start.py  railway.toml  render.yaml  requirements.txt  requirements_production.txt  server_production.py  server_widget.py  setup.py  setup_venv.py  test_edge_cases.db  test_prospects.db  test_prospects_improved.db  test_widget.html  (+2 more)
.claude/: settings.local.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
app/: __init__.py  agent.py  api.py  brevo_integration.py  interface.py  main.py  utils.py  web_app.py
app/agents/: __init__.py  prospecting_agent.py  unified_agent.py
app/config/: brevo_config.py
app/core/: prompt_manager.py  prompt_registry.py  rag_system.py
app/database/: __init__.py  database.py  prospect_db.py  prospect_db_fixed.py
app/interfaces/: __init__.py  widget_api.py
app/interfases/: gradio_interface.py
app/nodes/: __init__.py  brevo_sync_node.py  data_extractor.py  information_agent.py  interest_detector.py  message_parser.py  (+1 more)
test/: README.md  __init__.py  test_prospecting_agent.py  test_supervisor_flow.py
(+7 files in other folders)
