[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Benites",email = "lucasbneuman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=0.4.8,<0.5.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "openai (>=1.88.0,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langgraph-cli[inmem] (>=0.3.3,<0.4.0)",
    "fastapi[standard] (>=0.115.13,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
